[project]
name = "News-Vol-Forecast"
version = "0.1.0"
description = "Fusing news headlines and market data for multimodal stock volatility forecasting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "protobuf>=7.34.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "yfinance>=1.2.0",
]
